9.4.2
Introduce a dynamic pricing subsystem and integrate it across configs, UI and docs. Key changes: create dynamicpricing.yml (auto-created on init) and load its enabled flag from ConfigManager; update TransactionGui to refresh prices after transactions; extend ItemType to treat SHOP/ITEM/COMMAND as purchasable and adjust editor/shop deserialization/auto-conversion logic; add market/admin commands/docs and marketplace persistence notes; auto-blacklist GUIShop inventories from worth display; refactor SkullCreator to use URI and remove authlib usage; simplify NBT extraction fallback in GuishopCommand; add paperweight manifest entry and adjust maven-shade settings to avoid Paper PluginRemapper; remove obsolete .mojang-mapped resource and bump project version to 9.4.2; update documentation and examples to include SHOP_SHORTCUT and other new/clarified item types. Fixed bugs hiding the showing of buy/selling lore, and prices not refreshing with dynamic pricing enabled.